增加 NV12 格式的图像集中每帧图片的提取

--- a/NV12_pro/CMakeLists.txt
+++ b/NV12_pro/CMakeLists.txt
@@ -42,18 +42,5 @@ project(linux_app_test)
 
 
 message(STATUS "CMAKE_C_COMPILER1 = ${CMAKE_C_COMPILER}")
-
-
-add_subdirectory(ipc_semaphore_test)
-add_subdirectory(test)
-
-add_subdirectory(ipc_share_mem_test/share_mem0)
-add_subdirectory(ipc_share_mem_test/share_mem1)
-add_subdirectory(ipc_share_mem_test/share_mem2)
-add_subdirectory(core_dumped_test)
-add_subdirectory(NV12_pro)
-
-#add_subdirectory(virtual_test)
-
-#add_executable(ipc_semaphore_test main.c)
+add_executable(NV12_pro NV12_pro.c)
 
